--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -46,6 +46,10 @@ repository:
   # Either `true` to enable automatic deletion of branches on merge, or `false` to disable
   delete_branch_on_merge: true
 
+  # Always suggest updating pull request branches
+  # Whenever there are new changes available in the base branch, present an “update branch” option in the pull request.
+  allow_update_branch: true
+
   # Either `true` to enable automated security fixes, or `false` to disable
   # automated security fixes.
   # enable_automated_security_fixes: true # Broken, see https://github.com/repository-settings/app/issues/625#issuecomment-1252623857
