--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -157,7 +157,4 @@ branches:
       # Allows deletion of the protected branch by anyone with write access to the repository.
       allow_deletions: false
       # Required. Restrict who can push to this branch. Team and user restrictions are only available for organization-owned repositories. Set to null to disable.
-      restrictions:
-        apps: []
-        users: []
-        teams: []
+      restrictions: null
