--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -145,7 +145,7 @@ branches:
         # Required. The list of status checks to require in order to merge into this branch.
         checks: []
       # Required. Enforce all configured restrictions for administrators. Set to true to enforce required status checks for repository administrators. Set to null to disable.
-      enforce_admins: true
+      enforce_admins: false
       # Prevent merge commits from being pushed to matching branches
       required_linear_history: false
       # Permits force pushes to the protected branch by anyone with write access to the repository
