--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -19,31 +19,25 @@ repository:
   # Updates the default branch for this repository.
   default_branch: main
 
-  # Either `true` to allow squash-merging pull requests, or `false` to prevent
-  # squash-merging.
+  # Either `true` to allow squash-merging pull requests, or `false` to prevent squash-merging.
   allow_squash_merge: false
 
-  # Either `true` to allow merging pull requests with a merge commit, or `false`
-  # to prevent merging pull requests with merge commits.
+  # Either `true` to allow merging pull requests with a merge commit, or `false` to prevent merging pull requests with merge commits.
   allow_merge_commit: true
 
-  # Either `true` to allow rebase-merging pull requests, or `false` to prevent
-  # rebase-merging.
+  # Either `true` to allow rebase-merging pull requests, or `false` to prevent rebase-merging.
   allow_rebase_merge: false
 
   # Either `true` to enable automatic deletion of branches on merge, or `false` to disable
   delete_branch_on_merge: true
 
-  # Always suggest updating pull request branches
   # Whenever there are new changes available in the base branch, present an “update branch” option in the pull request.
   allow_update_branch: true
 
-  # Either `true` to enable automated security fixes, or `false` to disable
-  # automated security fixes.
+  # Either `true` to enable automated security fixes, or `false` to disable automated security fixes.
   enable_automated_security_fixes: true
 
-  # Either `true` to enable vulnerability alerts, or `false` to disable
-  # vulnerability alerts.
+  # Either `true` to enable vulnerability alerts, or `false` to disable vulnerability alerts.
   enable_vulnerability_alerts: true
 
 # Labels: define labels for Issues and Pull Requests
